[package]
name = "pteranodon"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
regex = "1"
serde_json = "1.0.91"
clap = { version = "4.0.32", features = ["derive"] }
any_ascii = "*"
url = "2.3.1"
anyhow = "1.0.71"
tokio = { version = "1.32.0", features = ["full"] }
axum = "0.6.20"
tokio-postgres = "0.7.10"
reqwest = { version = "0.11.20", default-features = false, features = [
    "serde_json",
    "json",
    "rustls-tls",
] }
